--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,11 @@
         overscroll-behavior: none;
         width: 100%;
     }
+
+    #root{
+        box-shadow: 0 0 10px rgba(0,0,0,.05);
+        overflow-x: hidden;
+        min-height: 100vh;
+        padding-bottom: 10px;
+    }
 }
